# pyqt-feedback-flow

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  run.py  show_image_feedback.py
.github/templates/: PULL_REQUEST.md
.github/workflows/: python-app.yml
docs/: conf.py  index.rst
docs/about/: code_of_conduct.rst
docs/dev/: documentation.rst  installation.rst
docs/pyqt-feedback-flow/: feedback.rst  index.rst
docs/user/: usage.rst
examples/: show_image_feedback.py  show_text_feedback.py
pyqt_feedback_flow/: __init__.py  feedback.py
tests/: test_pyqt_feedback_flow.py  test_pyqt_image_feedback_flow.py  test_pyqt_text_feedback_flow.py
