[tool.poetry]
name = "pyqt-feedback-flow"
version = "0.3.0"
description = "Show feedback in toast-like notifications"
authors = ["Iztok Fister Jr. <iztok@iztok-jr-fister.eu>", "Luka Lukač <luka.lukac@student.um.si>"]
homepage = "https://github.com/firefly-cpp/pyqt-feedback-flow"
repository = "https://github.com/firefly-cpp/pyqt-feedback-flow"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
PyQt6 = "^6.4.2"
emoji = "^2.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
