[tool.poetry]
name = "pyqt-feedback-flow"
version = "0.3.1"
description = "Show feedback in toast-like notifications"
authors = ["Iztok Fister Jr. <iztok@iztok-jr-fister.eu>", "Luka Lukač <luka.lukac@student.um.si>"]
keywords = ['notifications', 'toast', 'pyqt6']
homepage = "https://github.com/firefly-cpp/pyqt-feedback-flow"
repository = "https://github.com/firefly-cpp/pyqt-feedback-flow"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
PyQt6 = "^6.4.2"
emoji = "^2.6.0"
Sphinx = {version = "^4.4.0", optional = true}
sphinx-rtd-theme = {version = "^1.0.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
