[tool.poetry]
name = "pyqt-feedback-flow"
version = "0.3.4"
description = "Show feedback in toast-like notifications"
authors = ["Iztok Fister Jr. <iztok@iztok-jr-fister.eu>", "Luka Lukač <luka.lukac@student.um.si>"]
keywords = ['feedback', 'notifications', 'toast', 'pyqt6']
homepage = "https://github.com/firefly-cpp/pyqt-feedback-flow"
repository = "https://github.com/firefly-cpp/pyqt-feedback-flow"
readme = "README.md"

include = [
    { path="LICENSE", format="sdist" },
    { path="CHANGELOG.md", format="sdist" },
    { path="CITATION.cff", format="sdist" },
]

[tool.poetry.dependencies]
python = "^3.10"
PyQt6 = "^6.4.2"
emoji = "^2.6.0"
Sphinx = {version = "^5.0", optional = true}
sphinx-rtd-theme = {version = "^1.0.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-qt = "*"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
